Fix angles for h1 and h2

--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Animated clock</title>
+  <title>Frozen Not in Time</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One"rel="stylesheet">
 </head>
+
 <body>
 
+<div class="grid grid-stretch">
+
+  <div class="red unit xs-1 s-1 m-3-4 l-3-4">
+
+    <h1>Ice Cream </h1>
+    <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth!</br></h2>
+  <div>
+    <a class="btn" href="#">Enjoy Now!</a>
+  </div>
+
+  </div>
+
+  <div class="blue unit xs- 1 s-1 m-1-4 l-1-4">
   <div class="ice-cream-cone">
-    <img class="cone" src="images/cone.svg" alt="">
     <img class="mint-chip" src="images/mint-chip.svg" alt="">
     <img class="chocolate-chip" src="images/chocolate-chip.svg" alt="">
     <img class="vanilla-fudge" src="images/vanilla-fudge.svg" alt="">
     <img class="cherry" src="images/cherry.svg" alt="">
+    <img class="cone" src="images/cone.svg" alt="">
   </div>
+</div>
+
+</div>
 
 </body>
 </html>
