Add animation to cherry

--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
   <title>Frozen Not in Time</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One"rel="stylesheet">
 </head>
 
 <body>
-
-<div class="grid grid-stretch">
-
-  <div class="red unit xs-1 s-1 m-3-4 l-3-4">
-
-    <h1>Ice Cream </h1>
-    <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth!</br></h2>
-  <div>
-    <a class="btn" href="#">Enjoy Now!</a>
-  </div>
-
-  </div>
+  <div class="grid grid-middle gutter-2 wrapper">
+    <div class="red unit xs-1 s-1 m-3-4 l-3-4">
+        <h1 class="push-double">Ice Cream </h1>
+        <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth!</br></h2>
+      </div>
+      <div>
+        <a class="btn" href="#">Enjoy Now!</a>
+      </div>
+    </div>
 
   <div class="blue unit xs- 1 s-1 m-1-4 l-1-4">
   <div class="ice-cream-cone">
@@ -34,7 +31,6 @@
     <img class="cone" src="images/cone.svg" alt="">
   </div>
 </div>
-
 </div>
 
 </body>
