--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
 </head>
 
 <body>
   <div class="grid grid-middle gutter-2 wrapper">
     <div class="red unit xs-1 s-1 m-3-4 l-3-4">
         <h1 class="push-double">Ice Cream </h1>
-        <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth!</br> </h2>
-          <a class="btn" href="#">Enjoy Now!</a>
+        <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth! </br> </h2>
+          <div class="btn btn btn-ghost" href="#">Enjoy Now!</div>
       </div>
-      <div>
 
-      </div>
     </div>
 
   <div class="blue unit xs- 1 s-1 m-1-4 l-1-4">
