--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <div class="grid grid-middle gutter-2 wrapper">
     <div class="red unit xs-1 s-1 m-3-4 l-3-4">
-        <h1 class="push-double">Ice Cream </h1>
+        <h1 class="tena">Ice Cream </h1>
         <h2>So sweet, creamy & delicious it’ll <br>literally melt in your mouth! </br> </h2>
-          <div class="btn btn btn-ghost" href="#">Enjoy Now!</div>
+          <div class="btn btn-ghost" href="#">Enjoy Now!</div>
       </div>
 
     </div>
