Fix max height issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="grid grid-middle gutter-2 wrapper">
     <div class="red unit xs-1 s-1 m-3-4 l-3-4">
         <h1 class="tena">Ice Cream </h1>
-        <h2 class="tera">So sweet, creamy & delicious it’ll literally melt in your mouth!</h2>
+        <h2 class="tera">So sweet, creamy & delicious it’ll<br> literally melt in your mouth!</h2></br>
           <div class="btn btn-ghost">Enjoy Now!</div>
       </div>
 
