--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <div class="grid grid-middle gutter-2 wrapper">
     <div class="red unit xs-1 s-1 m-3-4 l-3-4">
-        <h1 class="tena">Ice Cream </h1>
-        <h2 class="tera">So sweet, creamy & delicious it’ll<br> literally melt in your mouth!</h2></br>
+        <h1 class="tena pad-top-double">Ice Cream </h1>
+        <h2 class="tera pad-bottom-double">So sweet, creamy & delicious it’ll<br> literally melt in your mouth!</h2></br>
           <div class="btn btn-ghost">Enjoy Now!</div>
       </div>
 
